# PSDK-android

./: .gitignore  README.md  build.gradle  gradle.properties  local.properties  settings.gradle
.github/workflows/: build.yml
app/: build.gradle
app/src/debug/: AndroidManifest.xml
app/src/main/: AndroidManifest.xml
app/src/main/assets/: google_attestation_roots.pem  starter.rb  test_memory.rb
app/src/main/cpp/: CMakeLists.txt  epsa_kdf.cpp  hkdf.c  hkdf.h  hmac_sha256.c  hmac_sha256.h  jni_helper.c  jni_helper.h  jni_psdk.c  jni_psdk.h  logging.c  logging.h  main.c  main.cpp  prepare.c  prepare.h  psdk.cpp  psdk.h  ruby.c  ruby.h  sample_png.cpp  sample_png.h  sha256.c  sha256.h  test_epsa_kdf.c
app/src/main/cpp/engine-check/: CMakeLists.txt  jni_engine_check.c  jni_engine_check.h
app/src/main/cpp/jni/: CMakeLists.txt  jni_psdk.c  jni_psdk.h  jni_ruby_info.c  jni_ruby_info.h
app/src/main/cpp/jni-lib/: CMakeLists.txt  jni_helper.c  jni_helper.h
app/src/main/cpp/jni-psdk-service/: CMakeLists.txt  jni_psdk.c  jni_psdk.h  logging.c  psdk.cpp  psdk.h
app/src/main/cpp/jni-ruby-info/: CMakeLists.txt  jni_ruby_info.c  jni_ruby_info.h
app/src/main/cpp/lite-unzip/: CMakeLists.txt  liteunz.c  liteunz.h
app/src/main/cpp/logging/: logging.c  logging.h
app/src/main/cpp/minizip-unzip-port/: miniunz.c  miniunz.h
app/src/main/cpp/psdk-script-starter/: CMakeLists.txt  get_activity_parameters.c  psdk.c  psdk.cpp  psdk.h
app/src/main/cpp/ruby-info/: CMakeLists.txt  jni_ruby_info.c  jni_ruby_info.h
app/src/main/cpp/ruby-vm/: CMakeLists.txt  ruby-vm.c  ruby-vm.h
app/src/main/ext-native-libs/arm64-v8a/: libform.so.6.0  libgdbm.so.6  libgdbm_compat.so.4  libhistory.so.8  libmenu.so.6.0  libpanel.so.6.0  libreadline.so.8.0  libruby.so.3.0.0
app/src/main/ext-native-libs/include/LiteCGSS/Common/: Bindable.h  BondElement.h  Loader.h  Logger.h  NormalizeNumbers.h  Rectangle.h  Saver.h  Serializer.h
app/src/main/ext-native-libs/include/LiteCGSS/Configuration/: DisplayWindowContextSettings.h  DisplayWindowSettings.h
app/src/main/ext-native-libs/include/LiteCGSS/Events/: MainEventDispatcher.h  ViewportChangeEvent.h  WindowSizeChangeEvent.h
app/src/main/ext-native-libs/include/LiteCGSS/Graphics/: Drawable.h  GraphicItem.h  GraphicsStackItem.h  GraphicsStackItemPtr.h  LoggerDrawables.h  RenderStates.h  RenderStatesData.h  ScrollText.h  ShaderRenderable.h  Shape.h  Sprite.h  SpriteMap.h  Text.h  Texture.h  Transformable.h  ZIndex.h
app/src/main/ext-native-libs/include/LiteCGSS/Image/: Image.h  YukiGif.h
app/src/main/ext-native-libs/include/LiteCGSS/Views/: DisplayWindow.h  DisplayWindowDraw.h  DisplayWindowSnapshot.h  DisplayWindowUserData.h  FramedView.h  LoggerViews.h  SnapshotCapturable.h  View.h  ViewAuthorizations.h  (+2 more)
app/src/main/ext-native-libs/include/ruby/: config.h
app/src/main/java/com/psdk/: AppInstall.java  AppInstall.kt  AppModeDetector.kt  BuildApkActivity.kt  CompileActivity.java  CompileActivity.kt  CompileProcessActivity.kt  CompileProcessStepData.kt  CompileProcessStepListAdapter.kt  CompileStepData.kt  CompileStepListAdapter.kt  DisplayElfInfo.java  DisplayElfInfo.kt  EngineCheck.java  GameLauncher.kt  MainActivity.java  MainActivity.kt  PSDKScript.java  PathUtil.java  PathUtil.kt  ProjectCompiler.java  ProjectMainActivity.kt  ProjectSelectionActivity.kt  PsdkApplication.java  PsdkProcess.java  PsdkProcess.kt  PsdkProcessLauncher.java  PsdkProcessLauncher.kt  ReadElf.java  ReadElf.kt  ReadLogDetailsActivity.kt  RubyInfo.java  RubyInfo.kt  Signer.kt  SigningOptions.kt  UnzipUtility.java  UnzipUtility.kt  ZipUtility.java  ZipUtility.kt
app/src/main/jniLibs/arm64-v8a/: libcrypto.so.1.1  libform.so.6  libgdbm.so.6  libgdbm_compat.so.4  libhistory.so.8  libmenu.so.6  libpanel.so.6  libreadline.so.8  libssl.so.1.1
app/src/main/res/drawable/: bg_button_filled.xml  bg_button_outlined.xml  bg_card.xml  bg_step_active.xml  bg_step_completed.xml  bg_step_connector.xml  bg_step_connector_active.xml  bg_step_pending.xml  ic_arrow_back.xml  ic_error.xml  ic_folder_open.xml  ic_share.xml
app/src/main/res/layout/: activity_classic_setup.xml  activity_compile_wizard.xml  activity_project_hub.xml  builder.xml  compilation_group_step.xml  compilation_item_step.xml  compiler.xml  compiler_process.xml  fragment_compile_done.xml  fragment_compile_progress.xml  fragment_export_apk.xml  fragment_import_archive.xml  fragment_log_bottom_sheet.xml  fragment_project_detail.xml  fragment_project_list.xml  item_compile_step.xml  item_project_card.xml  main.xml  project_main_page.xml  project_selection.xml  readlogdetails.xml
app/src/main/res/values/: colors.xml  dimens.xml  strings.xml  themes.xml  type.xml
app/src/main/res/values-v27/: themes.xml
app/src/main/res/xml/: file_paths.xml
app/src/main/ruby/: backup_saves.rb  check_engine.rb  compile.rb  copy_saves.rb  fifo_interpreter.rb  ruby_physfs_patch.rb  start.rb  start_uncompiled.rb
app/src/main/ruby/lib/: archive_mount.rb  epsa_format.rb  epsa_stream.rb
app/src/test/ruby/: test_epsa_stream.rb
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
scripts/: fetch_attestation_roots.rb
(+212 files in other folders)
